[project]
name = "metar-map"
version = "0.1.0"
description = ""
authors = [
    {name = "Kyle Hurd",email = "kmdude1000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "metar_map", from = "src"}]
include = [
    "src/metar_map/static/config.yaml"
]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint = "^3.3.8"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
